<resources>
    <string name="app_name">BakingApp</string>
    <string name="recipe_name">Default Recipe Name</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="recipe_steps">Recipe Steps</string>
    <string name="ingredient">Ingredient:</string>
    <string name="quantity">Quantity:</string>
    <string name="measure">Measure:</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="failed_connection">No Internet Avialable</string>
</resources>
