<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_8"
        android:orientation="vertical">
<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
        <ImageView
    android:id="@+id/recipe_thumbnail"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginBottom="@dimen/default_4"
    android:src="@drawable/default_recipe_thumbnail"
    />
    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_16"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/default_16"
        android:text="@string/recipe_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        />
</FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">
            <Button
                android:id="@+id/ingredients_btn"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/recipe_ingredients"/>
            <Button
                android:id="@+id/steps_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_steps"
                android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
</RelativeLayout>